# ewv

./: .gitignore  Cargo.toml  build.rs  ewv-browser.el  ewv-core.el  ewv-extension.el  ewv-mode-line.el  ewv-org-inline.el  ewv.el  modeline.html  readme.org
extensions/kgnghhfkloifoabeaobjkgagcecbnppg/1.17.12_0/: manifest.json
patches/: webview2-com+0.38.2.patch
src/: hooks.rs  lib.rs  lisp.rs  webview.rs
